<?xml version="1.0"?>
<package format="2">
  <name>hector_mapping</name>
  <version>0.5.0</version>
  <description>
    hector_mapping is a SLAM approach that can be used without odometry as well as on platforms that exhibit roll/pitch motion (of the sensor, the platform or both).
    It leverages the high update rate of modern LIDAR systems like the Hokuyo UTM-30LX and provides 2D pose estimates at scan rate of the sensors (40Hz for the UTM-30LX).
    While the system does not provide explicit loop closing ability, it is sufficiently accurate for many real world scenarios. The system has successfully been used on
    Unmanned Ground Robots, Unmanned Surface Vehicles, Handheld Mapping Devices and logged data from quadrotor UAVs.
  </description>

  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_mapping</url>
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>message_filters</depend>
  <depend>laser_geometry</depend>
  <depend>tf_conversions</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
